Feature/intermediate page queries (#14)
* Add intermediate page endpoints for corps, unis, and politicians

* Add documentation

* Fix docs and cleanup code

* Fix docs descriptions

* Fix tests

* Fix tests description

* Cleanup code

* Fix constant naming
