# src/controllers/organization.controller.ts
@@ -21,6 +21,20 @@ class OrganizationController {
       next(error);
     }
   };
+
+  public getOrganizationList = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
+    try {
+      // Unpack the query parameters
+      const industries: string | undefined = req.query.industries?.toString();
+      const sortField: string | undefined = req.query.sortField?.toString();
+      const order: string | undefined = req.query.order?.toString();
+
+      const orgList = await this.organizationService.getOrganizationList(industries, sortField, order);
+      res.status(200).json(orgList);
+    } catch (error) {
+      next(error);
+    }
+  };
 }
 
 export default OrganizationController;
